syntax = "proto3";

package user;


service UserService {
    rpc findAllUsers (Empty) returns (Users) {}
    rpc findOneUser (FindOneUserDto) returns (User) {}
    rpc updateOneUser (UpdateUserDto) returns (User) {}
    rpc removeUser (FindOneUserDto) returns (User) {}
}

// Add photo 
message UpdateUserDto {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string userName = 4;
    string email = 5;
    optional string photo = 6;

}

message FindOneUserDto {
    int32 id = 1;
}

message Empty {}

message Users {
    repeated User users = 1;
}

message CreateUserDto {
    string firstName = 1;
    string lastName = 2;
    string userName = 3;
    string email = 4;
    string password = 5;
    string dateOfBirth = 6;
    optional string photo = 7;
}

message User {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string userName = 4;
    string email = 5;
    string password = 6;
    string dateOfBirth = 7;
    optional string photo = 8;
    UserRole role = 9;
    optional string passwordChangedAt = 10;
    optional string passwordResetToken = 11;
    bool active = 12;
    optional string passwordResetExpires = 13;
    string createdAt = 14;
}

enum UserRole {
    USER = 0;
    ADMIN = 1;
}

// enum UserRole {
//   USER = "USER";
//   ADMIN = "ADMIN";
// }